# jellyfish

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/example/: README.md  window_features_PA300032.csv
docs/: methodology.docx
notebooks/: bews_demo.ipynb  quickstart.ipynb
scripts/: run_pipeline.py
src/: bews.py  pipeline.py
tests/: test_bews.py
