[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyfish-bews"
version = "0.1.0"
description = "Unsupervised behavioural Biological Early Warning System for marine pollution detection using Aurelia aurita"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Aleksandr N. Grekov" },
]
keywords = ["bews", "marine-pollution", "anomaly-detection", "jellyfish", "ecotoxicology", "cusum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
pipeline = ["matplotlib>=3.7"]
notebook = ["jupyter>=1.0", "matplotlib>=3.7", "openpyxl>=3.1"]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[project.urls]
Repository = "https://github.com/your-username/jellyfish"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["bews", "pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
